# copico-bonobo

./: .gitignore  README.md  go.mod
2.2/: spoon22k.kicad_pcb  spoon22k.kicad_sch
gen_metadata_uf2/: README.md  gen_metadata_uf2.go
v2.1/: spoon21g.kicad_pcb  spoon21g.kicad_prl  spoon21g.kicad_pro  spoon21g.kicad_sch  spoon21g_cpl_top.csv
v2.2/: spoon22k.kicad_prl  spoon22k.kicad_pro  spoon22k_cpl_top.csv
v2.3/firmware/: Makefile  bonobo-4port.py  bonobo-eclk-follow.py  bonobo-haltingly.py  bonobo-sane-null.py  bonobo-spoonfeed.py  bonobo-step51.py  bonobo-step52.py  entry.asm  entry0200.script  life-semi.c  step5.py
v2.3/spoon23d/: spoon23d-bom.csv  spoon23d.kicad_pcb  spoon23d.kicad_prl  spoon23d.kicad_pro  spoon23d.kicad_sch  spoon23d_cpl_top.csv
v2.4/firmware/: Makefile  bcoco2b.py  bonobo-haltingly.py  bonobo-life-semi.py  bonobo-sane-null.py  (+7 more)
v2.4/firmware/c/: CMakeLists.txt  bonobo.cpp  bonobo.cpp-for-life  bonobo.h  bootdata.h  bootdata.h-for-life  control.pio  gime_init_gen.py  gime_scrape.py  life-semi.decb.for-c.h-for-life  on_reset.pio  read.pio  spoon.pio  status.pio  vector.pio  write.pio
v2.4/firmware/c/bonobo-spoonfed/: CMakeLists.txt  bonobo-spoonfed.cpp  read.pio  status.pio  vector.pio  write.pio
v2.4/firmware/c/bonobo-spoonlessraw/: CMakeLists.txt  bonobo-spoonlessraw.cpp
v3.1-centipede/: README.md
v3.1-centipede/centipede-watcher/: CM-watcher-march  CM-watcher-two  CMakeLists.txt  H.centi  Hints.centi  Hints.centi-level1  README.md  fuzix.dsk  ssd1306.h  two.pio  watch.pio-4  watch.pio-5  watch.pio-6-good  watch.pio-7-good  watch.pio-9-unused  watcher-1.cpp  watcher-2-during-e.cpp  watcher-3-drops-some.cpp  watcher-32d-eq.cpp  watcher-32d-rabbit.cpp  watcher-march-crosscore.cpp  watcher-march.cpp  watcher-march.cpp-31  watcher-march.cpp-32-demo-mar-6  watcher-march.cpp-33  watcher-march.cpp-34-slow-runs  watcher-march.cpp-35-sorta-works-logstepping  watcher-march.cpp-36-had-to-DontCocoRam64k-for-it-to-work--try-64k-again  watcher-march.cpp-37-works32k-rebuilding-DoCocoRam64k  watcher-march.cpp-38-line-421-TODO--remove-the-short-circuit--it-breaks  watcher-march.cpp-40-CENTIPEDE_REV-3204-3205  watcher-march.cpp-41-fixed-formatted  watcher-march.cpp-42-BigRam-crashes-immed  watcher-march.cpp-443-added-CENTIPEDE_GRAB_ADDR  watcher-march.cpp-444-shortcircuit-bigram-ok  watcher-march.cpp-45  watcher-march.cpp-46-push-w-grab-swi  watcher-march.cpp-47-useful-grab-decode-but-not-all  watcher-march.cpp-48-mostly-CENTIPEDE_GRAB_ON_SWI2-ok  watcher-march.cpp-51-grabbing-seems-flaky  (+21 more)
(+34 files in other folders)
