set(PROJECT centipede-watcher)
cmake_minimum_required(VERSION 3.12)
#xset(PICO_BOARD pico2)
set(PICO_BOARD solderparty_rp2350_stamp_xl)
set(PICO_PLATFORM rp2350)

include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
project(${PROJECT} C CXX ASM)
pico_sdk_init()


add_executable(${PROJECT} watcher.cpp)
target_sources(${PROJECT} PRIVATE watcher.cpp )
target_link_libraries(${PROJECT} PRIVATE
    pico_stdlib
    pico_rand
    hardware_pio

    hardware_i2c
)
pico_add_extra_outputs(${PROJECT})

pico_enable_stdio_usb(${PROJECT} 1)
pico_enable_stdio_uart(${PROJECT} 0)

add_compile_definitions(OS_LEVEL=${OS_LEVEL})
add_compile_definitions(TRACKING=${TRACKING})

# The Pi Pico can be overclocked if the binary gets copied to ram.
pico_set_binary_type(${PROJECT} copy_to_ram)
